[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcphub"
version = "1.0.0"
description = "CLI tool for SonarQube analysis and MCP server registry management"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "boto3>=1.28.0",
    "urllib3>=2.0.0",
    "certifi>=2023.7.22",
]

[project.scripts]
mcphub = "mcphub.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/mcphub"
"Bug Reports" = "https://github.com/yourusername/mcphub/issues"
"Source" = "https://github.com/yourusername/mcphub"
