[metadata]
name = mcphub
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = CLI tool for SonarQube analysis and MCP server registry management
url = https://github.com/yourusername/mcphub
project_urls =
    Bug Reports = https://github.com/yourusername/mcphub/issues
    Source = https://github.com/yourusername/mcphub
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.31.0
    click>=8.1.0
    boto3>=1.28.0
    urllib3>=2.0.0
    certifi>=2023.7.22

[options.entry_points]
console_scripts =
    mcphub = mcphub.cli:main
